Bugfix: Companies created with past IDs (#30)